@@ -5,27 +5,27 @@
 ##' @param mapping aesthetic mapping
 ##' @param data data
 ##' @param layout one of 'rectangular', 'slanted', 'circular', 'radial' or 'unrooted'
-##' @param setup_data logical
+##' @param multiPhylo logical
 ##' @param ... additional parameter
 ##' @return tree layer
 ##' @importFrom ggplot2 geom_segment
 ##' @importFrom ggplot2 aes
 ##' @export
 ##' @author Yu Guangchuang
-geom_tree2 <- function(mapping=NULL, data=NULL, layout="rectangular", setup_data=FALSE, ...) {
+geom_tree2 <- function(mapping=NULL, data=NULL, layout="rectangular", multiPhylo=FALSE, ...) {
     stat_tree(data=data, mapping=mapping, geom="segment",
-              layout=layout, setup_data=setup_data, lineend="round", 
+              layout=layout, multiPhylo=multiPhylo, lineend="round", 
               position='identity', show.legend=NA,
               inherit.aes=TRUE, na.rm=TRUE, ...)
 }
 
 
 stat_tree <- function(mapping=NULL, data=NULL, geom="segment", position="identity",
-                      layout="rectangular", setup_data=FALSE, lineend="round", ...,
+                      layout="rectangular", multiPhylo=FALSE, lineend="round", ...,
                       show.legend=NA, inherit.aes=TRUE, na.rm=FALSE) {
     
     default_aes <- aes_(x=~x, y=~y,node=~node, parent=~parent)
-    if (setup_data) {
+    if (multiPhylo) {
         default_aes <- modifyList(default_aes, aes_(.id=~.id))
     }
     
@@ -44,7 +44,6 @@ stat_tree <- function(mapping=NULL, data=NULL, geom="segment", position="identit
                    show.legend = show.legend,
                    inherit.aes = inherit.aes,
                    params=list(layout = layout,
-                               setup_data = setup_data,
                                lineend = lineend,
                                na.rm = na.rm,
                           ...)
@@ -57,7 +56,6 @@ stat_tree <- function(mapping=NULL, data=NULL, geom="segment", position="identit
                    show.legend = show.legend,
                    inherit.aes = inherit.aes,
                    params=list(layout = layout,
-                               setup_data = setup_data,
                                lineend = lineend,
                                na.rm = na.rm,
                                ...)
@@ -72,7 +70,6 @@ stat_tree <- function(mapping=NULL, data=NULL, geom="segment", position="identit
               show.legend = show.legend,
               inherit.aes = inherit.aes,
               params=list(layout = layout,
-                          setup_data = setup_data,
                           lineend = lineend,
                           na.rm = na.rm,
                           ...)
@@ -82,35 +79,54 @@ stat_tree <- function(mapping=NULL, data=NULL, geom="segment", position="identit
 
 StatTreeHorizontal <- ggproto("StatTreeHorizontal", Stat,
                               required_aes = c("node", "parent", "x", "y"),
-                              compute_panel = function(self, data, scales, params, layout, setup_data, lineend) {
-                                  df <- setup_tree_data(data, setup_data)
-                                  x <- df$x
-                                  y <- df$y
-                                  parent <- df$parent
-                                  df$xend <- x
-                                  df$yend <- y
-                                  df$x <- x[parent]
+                              compute_panel = function(self, data, scales, params, layout, lineend) {
+                                  .fun <- function(data) {
+                                      df <- setup_tree_data(data)
+                                      x <- df$x
+                                      y <- df$y
+                                      parent <- df$parent
+                                      df$xend <- x
+                                      df$yend <- y
+                                      df$x <- x[parent]
+                                      ii <- is.na(x)
+                                      df$x[ii] <- NA
+                                      return(df)
+                                  }
+                                  
+                                  if ('.id' %in% names(data)) {
+                                      ldf <- split(data, data$.id)
+                                      df <- do.call(rbind, lapply(ldf, .fun))
+                                  } else {
+                                      df <- .fun(data)
+                                  }
                                   return(df)
                               }
                               )
 
 StatTreeVertical <- ggproto("StatTreeVertical", Stat,
                             required_aes = c("node", "parent", "x", "y"),
-                            compute_panel = function(self, data, scales, params, layout, setup_data, lineend) {                                
-                                df <- setup_tree_data(data, setup_data)
-                                x <- df$x
-                                y <- df$y
-                                parent <- df$parent
-                                
-                                ## data.frame(x = x[parent],
-                                ##            y = y[parent], 
-                                ##            xend = x[parent],
-                                ##            yend = y)
-
-                                df$x <- x[parent]
-                                df$y <- y[parent]
-                                df$xend <- x[parent]
-                                df$yend <- y
+                            compute_panel = function(self, data, scales, params, layout, lineend) {
+                                .fun <- function(data) {
+                                    df <- setup_tree_data(data)
+                                    x <- df$x
+                                    y <- df$y
+                                    parent <- df$parent
+                                    df$x <- x[parent]
+                                    df$y <- y[parent]
+                                    df$xend <- x[parent]
+                                    df$yend <- y
+                                    ii <- is.na(x)
+                                    df$x[ii] <- NA
+                                    df$y[ii] <- NA
+                                    df$xend[ii] <- NA
+                                    return(df)
+                                }
+                                if ('.id' %in% names(data)) {
+                                    ldf <- split(data, data$.id)
+                                    df <- do.call(rbind, lapply(ldf, .fun))
+                                } else {
+                                    df <- .fun(data)
+                                }
                                 return(df)
                             }
                             )
@@ -119,28 +135,38 @@ StatTreeVertical <- ggproto("StatTreeVertical", Stat,
 
 StatTree <- ggproto("StatTree", Stat,
                     required_aes = c("node", "parent", "x", "y"),
-                    compute_panel = function(self, data, scales, params, layout, setup_data, lineend) {
-                        df <- setup_tree_data(data, setup_data)
-                        x <- df$x
-                        y <- df$y
-                        parent <- df$parent
-                        df$x <- x[parent]
-                        df$y <- y[parent]
-                        df$xend <- x
-                        df$yend <- y
-                        return(df)                        
+                    compute_panel = function(self, data, scales, params, layout, lineend) {
+                        .fun <- function(data) {
+                            df <- setup_tree_data(data)
+                            x <- df$x
+                            y <- df$y
+                            parent <- df$parent
+                            df$x <- x[parent]
+                            df$y <- y[parent]
+                            df$xend <- x
+                            df$yend <- y
+                            ii <- is.na(x)
+                            df$x[ii] <- NA
+                            df$y[ii] <- NA
+                            return(df)
+                        }
+                        if ('.id' %in% names(data)) {
+                            ldf <- split(data, data$.id)
+                            df <- do.call(rbind, lapply(ldf, .fun))
+                        } else {
+                            df <- .fun(data)
+                        }
+                        return(df)
                     }
                     )
 
 
-setup_tree_data <- function(data, setup_data=FALSE) {
-    if (!setup_data)
-        return(data)
+setup_tree_data <- function(data) {
     if (nrow(data) == length(unique(data$node)))
         return(data)
     
     data[match(unique(data$node), data$node),]
-    # data[order(data$node, decreasing = FALSE), ]
+    ## data[order(data$node, decreasing = FALSE), ]
 }
 
 
