@@ -1,5 +1,7 @@
 CHANGES IN VERSION 1.3.11
 ------------------------
+ o solved issues of geom_tree2 <2016-01-25, Mon>
+   + https://github.com/GuangchuangYu/ggtree/issues/36
  o change compute_group() to compute_panel in geom_tree2() <2016-01-21, Thu>
    + fixed issue, https://github.com/GuangchuangYu/ggtree/issues/36
  o support phyloseq object <2016-01-21, Thu>
